Agregado Campo huella dactilar, corregido consultar sql de consultar usuario.

--- a/Boot-Park/Boot-Park/Content/css/desktop.css
+++ b/Boot-Park/Boot-Park/Content/css/desktop.css
@@ -8,4 +8,13 @@
 .icon-circulacion {
     background-image: url(../images/circulacion.png) !important;
 }
+
+.shortcut-icon-footprint {
+     width: 20px;
+    height: 20px;
+}
+
+.icon-footprint {
+    background-image: url(../images/footprint.ico) !important;
+}
         
